--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "@material-ui/icons": "^1.0.0-beta.43",
         "chartist": "^0.10.1",
         "marked": "^0.3.19",
         "material-ui": "1.0.0-beta.30",
@@ -15,7 +16,8 @@
         "react-google-maps": "^9.4.5",
         "react-router-dom": "^4.2.2",
         "react-scripts": "1.0.17",
-        "react-swipeable-views": "^0.12.12"
+        "react-swipeable-views": "^0.12.12",
+        "react-table": "^6.8.2"
     },
     "scripts": {
         "start": "react-scripts start",
