--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@material-ui/icons": "1.0.0-beta.42",
     "chartist": "0.10.1",
     "classnames": "2.2.5",
+    "marked": "^0.3.19",
     "material-ui": "1.0.0-beta.41",
+    "material-ui-icons": "^1.0.0-beta.36",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
     "react": "16.2.0",
