--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "marked": "^0.3.19",
     "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
+    "namor": "^1.0.1",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
     "react": "16.2.0",
@@ -19,7 +20,8 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
-    "react-swipeable-views": "0.12.12"
+    "react-swipeable-views": "0.12.12",
+    "react-table": "^6.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
