--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "1.0.0-beta.42",
     "chartist": "0.10.1",
     "classnames": "2.2.5",
+    "github-markdown-css": "^2.10.0",
     "marked": "^0.3.19",
     "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
