--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "@material-ui/icons": "1.0.0-beta.42",
-    "chartist": "0.10.1",
+    "@material-ui/icons": "1.0.0",
+    "chartist": "0.11.0",
     "classnames": "2.2.5",
     "github-markdown-css": "^2.10.0",
-    "marked": "^0.3.19",
+    "marked": "^0.4.0",
     "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
     "namor": "^1.0.1",
