--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chartist": "0.11.0",
     "classnames": "2.2.5",
     "github-markdown-css": "^2.10.0",
+    "immer": "^1.3.1",
     "marked": "^0.4.0",
     "material-ui": "1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
