--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immer": "^1.3.1",
     "marked": "^0.4.0",
     "material-ui": "1.0.0-beta.41",
+    "material-ui-chip-input": "^0.19.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "namor": "^1.0.1",
     "npm-run-all": "4.1.2",
